# temple

./: .gitignore  Cargo.toml  LICENSE  Readme.md  binding.gyp  grammar.js  grammar.ts  justfile  package.json  temple.fish  utils.js  utils.ts
benches/: criterion.rs  iai.rs
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
embedded/: Cargo.toml  main.rs
queries/: highlights.scm
src/: args.rs  clap_s.rs  config_files.rs  contents.rs  delimit.rs  grammar.json  indicator.rs  indicators.rs  keys.rs  lib.rs  log.rs  main.rs  node-types.json  parser.c  renderer.rs  replacer.rs  template.rs  temple.rs  temple_init.rs  temple_list.rs  temple_new.rs  word.rs
src/config/: mod.rs  token.rs
src/indicator/: mod.rs
src/values/: mod.rs  parser.rs  token.rs
temple_bench/: Cargo.toml
temple_bench/benches/: criterion.rs
temple_core/: Cargo.toml
temple_core/src/: contents.rs  indicators.rs  keys.rs  lib.rs  word.rs
temple_core/src/indicator/: indicators.rs  mod.rs
temple_parse/: Cargo.toml  Earthfile  cachegrind.out
temple_parse/benches/: criterion.rs  iai.rs  my_benchmark.rs  out.txt
temple_parse/src/: lib.rs
temple_shared/: Cargo.toml
temple_shared/src/: lib.rs  renderer.rs
test/: Readme.md  justfile  test.tex
