[package]
name = "temple"
version = "0.4.0"
edition = "2021"
license = "MIT"

description = "Jet another project template renderer"
repository = "https://github.com/AOx0/temple"
categories = ["cli", "development-tools"]
keywords = ["template"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
fs_extra = "1.3.0"
directories = "5.0.1"

[dev-dependencies]
iai = "0.1.1"
criterion = "0.5.1"

[[bench]]
name = "criterion"
harness = false
