[package]
name = "temple"
version = "0.5.0"
edition = "2021"
license = "MIT"

description = "Jet another project template renderer"
repository = "https://github.com/AOx0/temple"
categories = ["cli", "development-tools"]
keywords = ["template"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
fs_extra = "1.3.0"
directories = "5.0.1"
anyhow = "1.0.76"
tera = "1.19.1"
logos = "0.13.0"
derive_builder = "0.12.0"
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
lazy_format = "2.0.3"
inquire = "0.6.2"
walkdir = "2.4.0"

