cargo-features = ["codegen-backend"]
[package]
name = "temple"
version = "0.5.0"
edition = "2021"
license = "MIT"

description = "Jet another project template renderer"
repository = "https://github.com/AOx0/temple"
categories = ["cli", "development-tools"]
keywords = ["template"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
fs_extra = "1.3.0"
directories = "5.0.1"
anyhow = "1.0.81"
tera = "1.19.1"
logos = "0.14.0"
derive_builder = "0.20.0"
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
lazy_format = "2.0.3"
inquire = "0.7.1"
walkdir = "2.5.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = false
strip = true

[profile.dev]
debug = true
codegen-backend = "cranelift"
opt-level = 0
lto = "off"
strip = false

