[package]
name = "NAME"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "NAME"
path = "main.rs"

[dependencies]
include_dir = "0.7.2"
fs_extra = "1.2.0"
heck = "0.4.0"
path-absolutize = "3.0.11"
Inflector = "0.11.4"
clap = {version = "3.1.6", default_features = false , features=["derive", "std"]}