[package]
name = "temple_bench"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
temple_core = { path = "../temple_core" }
iai = "0.1.1"
criterion = "0.3.5"

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false