[package]
name = "temple_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smartstring = "1.0.1"
path-absolutize = "3.0.13"

[dev-dependencies]
iai = "0.1.1"
criterion = "0.3.5"

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false